--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
   "license": "ISC",
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "apollo-server-express": "^3.13.0",
     "axios": "^1.13.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "graphql": "^16.11.0",
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.7.2",
