Change build command to 'bun run build'

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -30,7 +30,7 @@ jobs:
         run: bun lint
 
       - name: Run build
-        run: bun build
+        run: bun run build
 
       - name: Validation successful
         run: echo "All checks passed successfully!"
