fix: remove schema option from db url string

--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,13 @@
 NODE_ENV=development
 
 # App port
-APP_PORT=8000   
+APP_PORT=8000
 
 # Base URL of the application
 BASE_URL=http://localhost:8000
 
 # PostgreSQL connection string
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/challenge_dev?schema=public
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/challenge_dev
 
 # Secret key for signing JWTs
 JWT_SECRET=a0a11524-3981-47e0-a55d-acfc46f60a3e
