--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.38.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/bun": "^1.3.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.25",
     "@types/jsonwebtoken": "^9.0.10",
