--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     /* Modules */
     "module": "commonjs" /* Specify what module code is generated. */,
     "rootDir": "." /* Specify the root folder within your source files. */,
+    "types": ["bun"] /* Include Bun type definitions */,
     "typeRoots": [
       "./src/types",
       "./node_modules/@types"
