--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.13.0",
