docs: added readme

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ JWT_SECRET=a0a11524-3981-47e0-a55d-acfc46f60a3e
 ENCRYPTION_METHOD=aes-256-cbc
 ENCRYPTION_KEY=your-encryption-key
 ENCRYPTION_IV=your-encryption-iv
+
+#BREVO Configs
+BREVO_API_KEY=your-brevo-api-key
+BREVO_SENDER_EMAIL=your-brevo-sender-email
